# sortnetopt

./: Cargo.toml  README.md  search_and_verify.sh  verify_proof_cert.sh
checker/: update_extracted_code.sh
checker/snocheck/: .gitignore  package.yaml
checker/snocheck/src/: Check.hs  Decode.hs  Main.hs  Parallel.hs  ProofStep.hs  Translate.hs  VectSet.hs
checker/snocheck/src/Verified/: Checker.hs
checker/verified/: .gitignore  Checker.thy  Checker_Codegen.thy  Huffman.thy  ROOT  Sorting_Network.thy  Sorting_Network_Bound.thy  strict_and_parallel.patch
checker/verified/document/: root.tex
src/: dense_map.rs  fix.rs  huffman.rs  lib.rs  logging.rs  output_set.rs  proof.rs  prune.rs  search.rs  thread_pool.rs
src/index/: indexed_vec.rs
src/output_set/: canon.rs  index.rs  packed_vec.rs  subsume.rs
src/output_set/index/: indexed_vec.rs  tree.rs
src/search/: states.rs
