[package]
name = "sortnetopt"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true # Enables profiling

[profile.bench]
debug = true # Enables profiling

[dependencies]
log = "0.4.8"
env_logger = "0.6.2"
better-panic = "0.2.0"
jemallocator = "0.3.2"
structopt = "0.3.2"
arrayvec = "0.5.0"
rustc-hash = "1.0.1"
arrayref = "0.3.5"
hashbrown = "0.6.0"
byteorder = "1.3.2"
num_cpus = "1.10.1"
async-std = { version = "0.99.8", features = ["unstable"] }
async-task = "1.0.0"
futures-preview = { version = "0.3.0-alpha.18", features = ["nightly", "async-await"] }
crossbeam-channel = "0.3.9"
abort_on_panic = "2.0.0"
scopeguard = "1.0.0"
pin-utils = "0.1.0-alpha.4"
memmap = "0.7.0"
rayon = "1.2.0"
indicatif = "0.12.0"

[dev-dependencies]
proptest = "0.9.4"
