[package]
name = "sortnetopt"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true # Enables profiling

[profile.bench]
debug = true # Enables profiling

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
better-panic = "0.2.0"
jemallocator = "0.3.2"
structopt = "0.3.16"
arrayvec = "0.5.1"
rustc-hash = "1.1.0"
arrayref = "0.3.6"
byteorder = "1.3.4"
num_cpus = "1.13.0"
async-std = "1.6.3"
async-task = "3.0.0"
futures = "0.3.5"
crossbeam-channel = "0.4.3"
abort_on_panic = "2.0.0"
scopeguard = "1.1.0"
pin-utils = "0.1.0"
memmap = "0.7.0"
rayon = "1.3.1"
indicatif = "0.15.0"

[dev-dependencies]
proptest = "0.10.1"
